# gitauditor

./: .coverage  .gitignore  404.html  BLUEPRINT.md  CHANGELOG.md  README.md  README_pt.md  index.html  mkdocs.yml  pyproject.toml  repomix-output.xml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/: index.html
changelog/: index.html
commands/catalog/: index.html
commands/policy/: index.html
commands/repo/: index.html
commands/ssh/: index.html
commands/worktree/: index.html
configuration/: index.html
docs/: architecture.md  configuration.md  getting-started.md
docs/commands/: catalog.md  policy.md  repo.md  ssh.md  worktree.md
getting-started/: index.html
search/: search_index.json
src/: __main__.py  cli.py
src/commands/: amend_cmd.py  audit_cmd.py  repo_cmd.py  ssh_cmd.py
src/core/: ollama_api.py  scanner.py  ssh_audit.py
src/gitauditor/: __main__.py  cli.py
src/gitauditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gitauditor/commands/: amend_cmd.py  audit_cmd.py  catalog_cmd.py  changelog_cmd.py  config_cmd.py  policy_cmd.py  repo_app.py  repo_cmd.py  review_cmd.py  ssh_cmd.py  worktree_cmd.py
src/gitauditor/core/: ai_api.py  audit_log.py  catalog.py  config.py  enricher.py  exceptions.py  git_ops.py  heuristics.py  models.py  ollama_api.py  policy_engine.py  scanner.py  semantic.py  ssh_audit.py
src/gitauditor/locales/: gitauditor.pot
src/gitauditor/locales/en_US/LC_MESSAGES/: gitauditor.mo  gitauditor.po  messages.mo  messages.po
src/gitauditor/locales/pt_BR/LC_MESSAGES/: gitauditor.mo  gitauditor.po  messages.mo  messages.po
tests/: conftest.py  test_ai_api.py  test_catalog_cmd.py  test_cli_commands.py  test_config.py  test_enricher.py  test_git_ops.py  test_point1_rebase_merges.py  test_point2_async_audit.py  test_point3_windows_rebase.py  test_point5_duplicates.py  test_policy_engine.py  test_scanner.py  test_ssh_audit.py  test_worktree_cmd.py
