[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitauditor"
version = "0.1.0"
description = "Manage, audit, and organize Git repositories locally."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.86.0",
    "GitPython>=3.1.43",
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "sqlmodel>=0.0.16",
    "tenacity>=8.0.0",
]

[project.scripts]
gitauditor = "gitauditor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
