[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitauditor"
version = "0.1.0"
description = "Manage, audit, and organize Git repositories locally."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Version Control",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
]
keywords = ["git", "audit", "ai", "llm", "catalog", "devtools"]
dependencies = [
    "textual>=0.86.0",
    "GitPython>=3.1.43",
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "sqlmodel>=0.0.16",
    "tenacity>=8.0.0",
    "pydantic>=2.9.2",
    "azure-identity>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/refernandes/gitauditor"
Documentation = "https://refernandes.github.io/gitauditor"
Repository = "https://github.com/refernandes/gitauditor"
Issues = "https://github.com/refernandes/gitauditor/issues"

[project.scripts]
gitauditor = "gitauditor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.14.0",
    "pip-audit>=2.7.3",
    "mypy>=1.14.1",
    "mkdocs-material>=9.5.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
# NOTE: Temporarily set to 37% instead of 80% so CI doesn't break. 
# Once we write tests for the remaining modules, we can bump this to 80.
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=80"
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "E402", "F841"]
